# Robot_Contoller

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  ackermann.cpp  main.cpp  pid.cpp  twoWDRobot.cpp  visualization.cpp
docs/: doxygen-file
docs/html/: ackermann_8cpp.html  ackermann_8cpp__incl.map  ackermann_8cpp__incl.md5  ackermann_8hpp.html  ackermann_8hpp__dep__incl.map  ackermann_8hpp__dep__incl.md5  ackermann_8hpp__incl.map  ackermann_8hpp__incl.md5  ackermann_8hpp_source.html  annotated.html  classAckermann-members.html  classAckermann.html  classPID-members.html  classPID.html  classPIDController.html  classTwoWDRobot-members.html  classTwoWDRobot.html  classVisualization-members.html  classVisualization.html  classes.html  classgnuplotio_1_1ArrayTraits-members.html  classgnuplotio_1_1ArrayTraits.html  classgnuplotio_1_1ArrayTraitsDefaults-members.html  classgnuplotio_1_1ArrayTraitsDefaults.html  classgnuplotio_1_1ArrayTraits_3_01T[N]_4-members.html  classgnuplotio_1_1ArrayTraits_3_01T[N]_4.html  classgnuplotio_1_1ArrayTraits_3_01T[N]_4__coll__graph.map  classgnuplotio_1_1ArrayTraits_3_01T[N]_4__coll__graph.md5  classgnuplotio_1_1ArrayTraits_3_01T[N]_4__inherit__graph.md5  (+447 more)
docs/latex/: ackermann_8cpp.tex  ackermann_8cpp__incl.md5  ackermann_8hpp.tex  (+167 more)
include/: ackermann.hpp  mockAckermann.hpp  pid.hpp  twoWDRobot.hpp  visualization.hpp
results/: cppcheck.txt  cppcheckAfterImplementation.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  testAckermann.cpp  testPID.cpp  testTwoWDRobot.cpp  testVisualization.cpp
(+30 files in other folders)
